--- a/package.json
+++ b/package.json
@@ -41,29 +41,37 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-three/drei": "^9.56.15",
     "@react-three/fiber": "^8.13.7",
-    "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.56.2",
     "@types/three": "^0.176.0",
+    "@vapi-ai/web": "^2.3.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
+    "dotenv": "^17.2.0",
     "embla-carousel-react": "^8.3.0",
+    "express": "^5.1.0",
+    "firebase": "^12.0.0",
     "framer-motion": "^12.9.4",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "openai": "^5.10.1",
     "pptxgenjs": "^3.12.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.53.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
+    "react-type-animation": "^3.2.0",
     "recharts": "^2.12.7",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.3",
