--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@react-three/drei": "^9.56.15",
-    "@react-three/fiber": "^8.13.7",
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.17.1",
     "@tanstack/react-query": "^5.56.2",
-    "@types/three": "^0.176.0",
+    "@types/three": "^0.159.0",
     "@vapi-ai/web": "^2.3.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -77,7 +77,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.150.1",
+    "three": "^0.159.0",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
   },
@@ -99,7 +99,12 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1",
+    "vite": "^5.3.5",
     "vite-plugin-pwa": "^1.0.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.18.0",
+    "@rollup/rollup-win32-x64-msvc": "^4.18.0",
+    "@rollup/rollup-darwin-x64": "^4.18.0"
   }
 }
