--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "outputDirectory": "dist",
   "functions": {
     "app/api/**/*.js": {
-      "runtime": "nodejs18.x"
+      "runtime": "@vercel/node"
     }
   },
   "env": {
