--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "@swc/core-linux-x64-gnu": "^1.3.62",
     "esbuild": "^0.20.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
